--- a/hello.html
+++ b/hello.html
@@ -1,3 +1,4 @@
+# This projeck was created for Android sample Course
 <html>
 <head>
 </head>
@@ -5,3 +6,4 @@
               <h1> Hello, Word!</h1>
        </body>
 </html>
+i can write anything here
